adding index.html and app.js

--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
     "khjrtbrg" 
   ],  
   "description": "Frontend of NoiseScore",  
-  "main": "layout.html",  
+  "main": "index.html",  
   "dependencies": {
     "angular": "1.3.8",
     "angular-ui-router": "0.2.13"
