--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,9 @@
   "description": "Frontend of NoiseScore",  
   "main": "index.html",  
   "dependencies": {
-    "angular": "1.3.8",
-    "angular-ui-router": "0.2.13"
+    "angular": "1.3.11",
+    "angular-ui-router": "0.2.13",
+    "angular-mocks": "1.3.x",
+    "bootstrap": "~3.1.1"
   } 
 }
