--- a/bower.json
+++ b/bower.json
@@ -1,16 +1,17 @@
 {
-  "name": "NoiseScore",  
-  "version": "0.0.1", 
-  "authors": [  
+  "name": "NoiseScore",
+  "version": "0.0.1",
+  "authors": [
     "katke",
-    "khjrtbrg" 
-  ],  
-  "description": "Frontend of NoiseScore",  
-  "main": "index.html",  
+    "khjrtbrg"
+  ],
+  "description": "Frontend of NoiseScore",
+  "main": "index.html",
   "dependencies": {
     "angular": "1.3.11",
     "angular-ui-router": "0.2.13",
     "angular-mocks": "1.3.x",
-    "bootstrap": "~3.1.1"
-  } 
+    "bootstrap": "~3.1.1",
+    "d3": "~3.5.4"
+  }
 }
